force-app/main/default/objects/Loan_Ownership__c/Loan_Ownership__c.object-meta.xml
<CustomObject>
    <label>Loan Ownership</label>
    <nameField>
        <displayFormat>AHLL0N-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Ownerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>