force-app/main/default/objects/Loan_Ownership__c/fields/Ownership_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Amount__c</fullName>
    <formula>Opportunity__r.Loan_Amount__c  *  Ownership_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>