force-app/main/default/objects/Loan_Ownership__c/fields/Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage__c</fullName>
    <label>Ownership Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>