force-app/main/default/objects/Loan_Ownership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Ownership_Percentage__c</columns>
    <columns>Ownership_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>